# juice

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  README.md  biome.json  build.js  package-lock.json  package.json  tsconfig.json
crates/embedded/: Cargo.toml
crates/embedded/src/: console.rs  drm.rs  input.rs  main.rs
crates/jsui/: Cargo.toml
crates/jsui-dev/: Cargo.toml
crates/jsui-dev/src/: lib.rs
crates/jsui/src/: canvas.rs  dom.rs  engine.rs  layout.rs  render.rs  tree.rs
crates/juice/: Cargo.toml
crates/juice-dev/: Cargo.toml
crates/juice/src/: canvas.rs  dom.rs  engine.rs  inherited_style.rs  lib.rs  renderer.rs  timers.rs
crates/preact-embedded/: Cargo.toml
crates/preact-embedded/src/: engine.rs  lib.rs  tree.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: main.rs
scripts/: dev-server.mjs
ts/: app.tsx  fake-dom.ts  index.tsx
